@@ -76,17 +76,16 @@ if opts.RUNCOMBS is not None:
 
 ## Some useful announcements about the data loaded and the interpolation planned
 if not opts.QUIET:
-    print
-    if (len(RUNS) < prof.min_runs(opts.ORDER, len(PARAMNAMES))):
+    if (len(RUNS) < prof.numCoeffs(len(PARAMNAMES), opts.ORDER)):
         print "Not enough runs for order %i polynomials"%opts.ORDER
         for i in xrange(1, opts.ORDER):
-            if (prof.min_runs(opts.ORDER -i, len(PARAMNAMES)) <= len(RUNS)):
-                print "Try order %i (min %i runs)"%(opts.ORDER -i, prof.min_runs(opts.ORDER -i, len(PARAMNAMES)))
+            if (prof.numCoeffs(len(PARAMNAMES), opts.ORDER -i) <= len(RUNS)):
+                print "Try order %i (min %i runs)"%(opts.ORDER -i, prof.numCoeffs(len(PARAMNAMES), opts.ORDER -i))
         import sys
         sys.exit(1)
     else:
         print "Building %dD interpolations in %d params: require at least %d runs" % \
-            (opts.ORDER, len(PARAMNAMES), prof.min_runs(opts.ORDER, len(PARAMNAMES)))
+            (opts.ORDER, len(PARAMNAMES), prof.numCoeffs(len(PARAMNAMES), opts.ORDER))
         print "Loaded %d distinct observables from %d runs" % (len(HISTOS), len(RUNS))
 
 
