@@ -8,6 +8,8 @@ from libcpp.string cimport string
 cdef extern from "Professor/Professor.h" namespace "Professor":
     string version()
 
+cdef extern from "Professor/Ipol.h" namespace "Professor":
+    int numCoeffs(int dim, int order)
 
 cdef extern from "Professor/ParamPoints.h" namespace "Professor":
     cdef cppclass ParamPoints:
